--- a/info.html
+++ b/info.html
@@ -415,11 +415,11 @@
             <div class="social-links">
                 <a href="https://www.instagram.com/account_x_tkj_3" target="_blank" class="social-btn instagram-btn">
                     <img src="Images/Icon/Instagram.png" alt="Instagram" class="social-icon">
-                    <span>Instagram X-TKJ-3 Bantara</span>
+                    <span>X TKJ 3 Bantara - account_x_tkj_3</span>
                 </a>
                 <a href="https://www.instagram.com/smk.bantara" target="_blank" class="social-btn instagram-btn">
                     <img src="Images/Icon/Instagram.png" alt="Instagram" class="social-icon">
-                    <span>Instagram SMK Bantara</span>
+                    <span>SMK Bantara - smk.bantara</span>
                 </a>
             </div>
         </div>
