--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             </h1>
             <div class="title-decoration"></div>
         </div>
-        <p class="subtitle">Anak-Anak TKJ 3 Nih</p>
+        <p class="subtitle">Anak X TKJ 3 Bangun Nusantara</p>
     </div>
 
     <!-- Bottom Navigation -->
