--- a/detail-bayu.html
+++ b/detail-bayu.html
@@ -412,6 +412,14 @@
     </style>
 </head>
 <body>
+    <!-- ========== VIDEO BACKGROUND ========== -->
+    <div class="video-background">
+        <video autoplay muted loop playsinline preload="auto">
+            <source src="Videos/Pixel Rain.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    <div class="video-overlay"></div>
 
     <div class="detail">
         <img id="photo" class="student-photo" src="Images/Siswa/Bayu Lutfiadi.jpg" alt="Bayu Lutfiadi">
