--- a/detail-isabil.html
+++ b/detail-isabil.html
@@ -6,19 +6,67 @@
     <title>Detail Isabil Nuh Ardiansiah</title>
 
     <style>
-        body {
+         body {
             font-family: Arial, sans-serif;
             background-color: #f2f2f2;
             padding: 20px;
+            position: relative;
+            min-height: 100vh;
+            overflow-x: hidden;
+        }
+
+        /* ========== VIDEO BACKGROUND ========== */
+        .video-background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -2;
+            overflow: hidden;
+        }
+
+        .video-background video {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
+            transform: translate(-50%, -50%);
+            object-fit: cover;
+            filter: brightness(0.8) contrast(1.1) saturate(1.2);
+        }
+
+        .video-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(
+                135deg,
+                rgba(0, 0, 0, 0.3) 0%,
+                rgba(20, 20, 40, 0.4) 50%,
+                rgba(0, 0, 0, 0.3) 100%
+            );
+            backdrop-filter: blur(1px);
+            z-index: -1;
         }
 
         .detail {
-            background-color: white;
+            background: rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(20px) saturate(180%);
+            -webkit-backdrop-filter: blur(20px) saturate(180%);
             padding: 20px;
-            border-radius: 10px;
+            border-radius: 16px;
             max-width: 500px;
             margin: auto;
-            box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+            box-shadow: 
+                0 8px 32px 0 rgba(31, 38, 135, 0.37),
+                inset 0 0 0 1px rgba(255, 255, 255, 0.18);
+            border: 1px solid rgba(255, 255, 255, 0.18);
             animation: zoomIn 0.5s ease-out;
         }
 
@@ -40,7 +88,11 @@
             object-fit: cover;
             display: block;
             margin: 0 auto 15px;
-            border: 3px solid #eee;
+            border: 3px solid rgba(255, 255, 255, 0.3);
+            box-shadow: 
+                0 8px 32px rgba(102, 126, 234, 0.4),
+                0 0 20px rgba(255, 255, 255, 0.2),
+                inset 0 0 0 1px rgba(255, 255, 255, 0.1);
             animation: fadeIn 0.8s ease-out;
         }
 
@@ -56,25 +108,43 @@
         a {
             display: inline-block;
             margin-top: 15px;
-            color: #007bff;
+            color: rgba(255, 255, 255, 0.9);
             text-decoration: none;
             font-weight: bold;
-            transition: color 0.3s ease;
+            transition: all 0.3s ease;
+            text-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+            padding: 8px 16px;
+            border-radius: 8px;
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
         }
 
         a:hover {
-            color: #0056b3;
+            background: rgba(255, 255, 255, 0.2);
+            color: #fff;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 15px rgba(255, 255, 255, 0.2);
         }
 
         .detail h2 {
             text-align: center;
             animation: fadeInDown 0.6s ease-out;
+            color: rgba(255, 255, 255, 0.95);
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+            font-weight: 700;
         }
 
         .detail p {
             animation: fadeInUp 0.7s ease-out;
             opacity: 0;
             animation-fill-mode: forwards;
+            color: rgba(255, 255, 255, 0.9);
+            text-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .detail p b {
+            color: rgba(255, 255, 255, 0.95);
+            text-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
         }
 
         .detail p:nth-child(3) { animation-delay: 0.1s; }
@@ -112,15 +182,17 @@
             margin-top: 15px;
             padding: 10px;
             width: 100%;
-            border: none;
-            border-radius: 8px;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            border-radius: 10px;
             font-weight: bold;
             cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.2s ease;
+            transition: all 0.3s ease;
+            backdrop-filter: blur(10px);
+            text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
         }
 
         .edit {
-            background: #28a745;
+            background: rgba(40, 167, 69, 0.3);
             color: white;
             animation: fadeInUp 0.7s ease-out 0.45s;
             opacity: 0;
@@ -128,48 +200,48 @@
         }
 
         .edit:hover {
-            background: #218838;
+            background: rgba(40, 167, 69, 0.5);
             transform: translateY(-2px);
+            box-shadow: 0 5px 20px rgba(40, 167, 69, 0.4);
         }
 
         .save {
-            background: #007bff;
+            background: rgba(0, 123, 255, 0.3);
             color: white;
             display: none;
         }
 
         .save:hover {
-            background: #0056b3;
+            background: rgba(0, 123, 255, 0.5);
+            box-shadow: 0 5px 20px rgba(0, 123, 255, 0.4);
         }
 
         input {
             width: 100%;
             padding: 8px;
             margin-top: 5px;
-            border-radius: 6px;
-            border: 1px solid #ccc;
+            border-radius: 8px;
+            border: 1px solid rgba(255, 255, 255, 0.3);
             display: none;
             box-sizing: border-box;
+            background: rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(10px);
+            color: #fff;
+            font-weight: 600;
+        }
+
+        input::placeholder {
+            color: rgba(255, 255, 255, 0.6);
+        }
+
+        input:focus {
+            outline: none;
+            border-color: rgba(255, 255, 255, 0.5);
+            background: rgba(255, 255, 255, 0.25);
         }
 
         .detail p span {
             display: inline;
-        }
-
-        /* Mobile Responsive */
-        @media (max-width: 480px) {
-            body {
-                padding: 10px;
-            }
-
-            .detail {
-                padding: 15px;
-            }
-
-            .student-photo {
-                width: 100px;
-                height: 100px;
-            }
         }
 
         /* ========== TOMBOL SOSIAL MEDIA ========== */
@@ -243,15 +315,21 @@
         .youtube:hover {
             background: linear-gradient(135deg, #CC0000 0%, #990000 100%);
         }
+
         /* ========== BACKGROUND MUSIC PLAYER ========== */
         .music-player {
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background: rgba(255, 255, 255, 0.95);
+            background: rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(20px) saturate(180%);
+            -webkit-backdrop-filter: blur(20px) saturate(180%);
             padding: 12px 16px;
-            border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+            border-radius: 16px;
+            box-shadow: 
+                0 8px 32px 0 rgba(31, 38, 135, 0.37),
+                inset 0 0 0 1px rgba(255, 255, 255, 0.18);
+            border: 1px solid rgba(255, 255, 255, 0.18);
             display: flex;
             align-items: center;
             gap: 12px;
@@ -289,7 +367,8 @@
         .music-title {
             font-size: 12px;
             font-weight: bold;
-            color: #333;
+            color: rgba(255, 255, 255, 0.95);
+            text-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
         }
 
         .music-controls {
@@ -298,20 +377,24 @@
         }
 
         .music-btn {
-            background: none;
-            border: none;
+            background: rgba(255, 255, 255, 0.2);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            border-radius: 6px;
             font-size: 16px;
             cursor: pointer;
-            padding: 4px;
-            transition: transform 0.2s;
+            padding: 4px 8px;
+            transition: all 0.2s;
         }
 
         .music-btn:hover {
-            transform: scale(1.2);
+            transform: scale(1.1);
+            background: rgba(255, 255, 255, 0.3);
+            box-shadow: 0 2px 10px rgba(255, 255, 255, 0.2);
         }
 
         .volume-control {
             width: 60px;
+            accent-color: rgba(255, 255, 255, 0.8);
         }
 
         @media (max-width: 480px) {
@@ -329,6 +412,14 @@
     </style>
 </head>
 <body>
+    <!-- ========== VIDEO BACKGROUND ========== -->
+    <div class="video-background">
+        <video autoplay muted loop playsinline preload="auto">
+            <source src="Videos/Rain Drops.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    <div class="video-overlay"></div>
 
     <div class="detail">
         <img id="photo" class="student-photo" src="Images/Siswa/Isabil Nuh Ardiansiah.jpg" alt="Isabil Nuh Ardiansiah">
@@ -500,4 +591,5 @@
 
 </body>
 </html>
+
 
