--- a/detail-farelSurya.html
+++ b/detail-farelSurya.html
@@ -415,7 +415,7 @@
     <!-- ========== VIDEO BACKGROUND ========== -->
     <div class="video-background">
         <video autoplay muted loop playsinline preload="auto">
-            <source src="Videos/Black Hole.mp4" type="video/mp4">
+            <source src="Videos/Mountains.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
@@ -591,6 +591,7 @@
 
 </body>
 </html>
+
 
 
 
