--- a/info.html
+++ b/info.html
@@ -422,13 +422,17 @@
                 kegiatan kelas, dan informasi penting lainnya!
             </p>
             <div class="social-links">
-                <a href="https://www.instagram.com/account_x_tkj_3" target="_blank" class="social-btn instagram-btn">
+                <a href="https://www.instagram.com/account_x_tkj_3/" target="_blank" class="social-btn instagram-btn">
                     <img src="Images/Icon/Instagram.png" alt="Instagram" class="social-icon">
                     <span>X TKJ 3 BANTARA - account_x_tkj_3</span>
                 </a>
-                <a href="https://www.instagram.com/smk.bantara" target="_blank" class="social-btn instagram-btn">
+                <a href="https://www.instagram.com/smk.bantara/" target="_blank" class="social-btn instagram-btn">
                     <img src="Images/Icon/Instagram.png" alt="Instagram" class="social-icon">
                     <span>SMK BANGUN NUSANTARA - smk.bantara</span>
+                </a>
+                 <a href="https://www.instagram.com/ipob.bantara/" target="_blank" class="social-btn instagram-btn">
+                    <img src="Images/Icon/Instagram.png" alt="Instagram" class="social-icon">
+                    <span>OSIS SMK BANTARA - ipob.bantara</span>
                 </a>
             </div>
         </div>
