--- a/login.html
+++ b/login.html
@@ -206,22 +206,98 @@
             text-align: center;
             margin-top: 20px;
             color: var(--text-color);
-            opacity: 0.7;
+            opacity: 1;
             font-size: 0.9em;
         }
 
         .guest-link a {
             color: #667eea;
             text-decoration: none;
-            font-weight: 600;
+            font-weight: 700;
+            padding: 8px 16px;
+            border-radius: 8px;
+            display: inline-block;
+            position: relative;
+            transition: all 0.3s ease;
+            animation: pulseGlow 2s ease-in-out infinite;
+            background: linear-gradient(135deg, rgba(102, 126, 234, 0.1) 0%, rgba(118, 75, 162, 0.1) 100%);
+            border: 2px solid rgba(102, 126, 234, 0.3);
+        }
+
+        @keyframes pulseGlow {
+            0%, 100% {
+                box-shadow: 0 0 10px rgba(102, 126, 234, 0.3),
+                            0 0 20px rgba(102, 126, 234, 0.2);
+                border-color: rgba(102, 126, 234, 0.3);
+                background: linear-gradient(135deg, rgba(102, 126, 234, 0.1) 0%, rgba(118, 75, 162, 0.1) 100%);
+            }
+            50% {
+                box-shadow: 0 0 20px rgba(102, 126, 234, 0.6),
+                            0 0 30px rgba(102, 126, 234, 0.4),
+                            0 0 40px rgba(102, 126, 234, 0.2);
+                border-color: rgba(102, 126, 234, 0.8);
+                background: linear-gradient(135deg, rgba(102, 126, 234, 0.2) 0%, rgba(118, 75, 162, 0.2) 100%);
+            }
         }
 
         .dark-mode .guest-link a {
             color: #3b82f6;
+            background: linear-gradient(135deg, rgba(59, 130, 246, 0.15) 0%, rgba(139, 92, 246, 0.15) 100%);
+            border: 2px solid rgba(59, 130, 246, 0.3);
+        }
+
+        @keyframes pulseGlowDark {
+            0%, 100% {
+                box-shadow: 0 0 10px rgba(59, 130, 246, 0.3),
+                            0 0 20px rgba(59, 130, 246, 0.2);
+                border-color: rgba(59, 130, 246, 0.3);
+                background: linear-gradient(135deg, rgba(59, 130, 246, 0.15) 0%, rgba(139, 92, 246, 0.15) 100%);
+            }
+            50% {
+                box-shadow: 0 0 20px rgba(59, 130, 246, 0.6),
+                            0 0 30px rgba(59, 130, 246, 0.4),
+                            0 0 40px rgba(59, 130, 246, 0.2);
+                border-color: rgba(59, 130, 246, 0.8);
+                background: linear-gradient(135deg, rgba(59, 130, 246, 0.25) 0%, rgba(139, 92, 246, 0.25) 100%);
+            }
+        }
+
+        .dark-mode .guest-link a {
+            animation: pulseGlowDark 2s ease-in-out infinite;
         }
 
         .guest-link a:hover {
-            text-decoration: underline;
+            text-decoration: none;
+            transform: translateY(-2px);
+            box-shadow: 0 0 25px rgba(102, 126, 234, 0.7),
+                        0 0 40px rgba(102, 126, 234, 0.5);
+        }
+
+        .dark-mode .guest-link a:hover {
+            box-shadow: 0 0 25px rgba(59, 130, 246, 0.7),
+                        0 0 40px rgba(59, 130, 246, 0.5);
+        }
+
+        .guest-link a::before {
+            content: '✨ ';
+            animation: sparkle 1.5s ease-in-out infinite;
+        }
+
+        .guest-link a::after {
+            content: ' ✨';
+            animation: sparkle 1.5s ease-in-out infinite;
+            animation-delay: 0.75s;
+        }
+
+        @keyframes sparkle {
+            0%, 100% {
+                opacity: 0.3;
+                transform: scale(0.8);
+            }
+            50% {
+                opacity: 1;
+                transform: scale(1.2);
+            }
         }
 
         @media (max-width: 480px) {
@@ -296,6 +372,11 @@
             .guest-link {
                 font-size: 0.85em;
                 margin-top: 15px;
+            }
+
+            .guest-link a {
+                padding: 6px 14px;
+                font-size: 0.95em;
             }
 
             .error-message {
