--- a/info.html
+++ b/info.html
@@ -200,6 +200,104 @@
             text-shadow: none;
         }
 
+        /* Games Section */
+        .games-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .game-card {
+            background: linear-gradient(135deg, rgba(102, 126, 234, 0.1) 0%, rgba(118, 75, 162, 0.1) 100%);
+            border: 2px solid rgba(102, 126, 234, 0.3);
+            border-radius: 16px;
+            padding: 20px;
+            text-decoration: none;
+            transition: all 0.3s ease;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .dark-mode .game-card {
+            background: linear-gradient(135deg, rgba(59, 130, 246, 0.15) 0%, rgba(139, 92, 246, 0.15) 100%);
+            border-color: rgba(59, 130, 246, 0.3);
+        }
+
+        .game-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.1), transparent);
+            transition: left 0.5s ease;
+        }
+
+        .game-card:hover::before {
+            left: 100%;
+        }
+
+        .game-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 25px rgba(102, 126, 234, 0.3);
+            border-color: rgba(102, 126, 234, 0.6);
+        }
+
+        .dark-mode .game-card:hover {
+            box-shadow: 0 10px 25px rgba(59, 130, 246, 0.4);
+            border-color: rgba(59, 130, 246, 0.7);
+        }
+
+        .game-icon {
+            font-size: 3.5em;
+            text-align: center;
+            filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.2));
+        }
+
+        .game-info {
+            flex: 1;
+        }
+
+        .game-title {
+            font-size: 1.4em;
+            font-weight: 700;
+            color: var(--text-color);
+            margin-bottom: 8px;
+        }
+
+        .game-description {
+            font-size: 0.9em;
+            color: var(--text-color);
+            opacity: 0.8;
+            line-height: 1.5;
+        }
+
+        .play-badge {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            padding: 10px 20px;
+            border-radius: 10px;
+            font-weight: 700;
+            text-align: center;
+            font-size: 0.95em;
+            box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);
+            transition: all 0.3s ease;
+        }
+
+        .dark-mode .play-badge {
+            background: linear-gradient(135deg, #3b82f6 0%, #8b5cf6 100%);
+        }
+
+        .game-card:hover .play-badge {
+            transform: scale(1.05);
+            box-shadow: 0 6px 16px rgba(102, 126, 234, 0.5);
+        }
+
         /* Responsive Design */
         @media (max-width: 768px) {
             .info-container {
@@ -272,6 +370,19 @@
                 width: 24px;
                 height: 24px;
             }
+
+            .games-grid {
+                grid-template-columns: 1fr;
+                gap: 15px;
+            }
+
+            .game-icon {
+                font-size: 3em;
+            }
+
+            .game-title {
+                font-size: 1.2em;
+            }
         }
 
         @media (max-width: 375px) {
@@ -297,6 +408,14 @@
             .social-icon {
                 width: 22px;
                 height: 22px;
+            }
+
+            .game-card {
+                padding: 16px;
+            }
+
+            .game-icon {
+                font-size: 2.5em;
             }
         }
     </style>
@@ -422,17 +541,44 @@
                 kegiatan kelas, dan informasi penting lainnya!
             </p>
             <div class="social-links">
-                <a href="https://www.instagram.com/account_x_tkj_3/" target="_blank" class="social-btn instagram-btn">
+                <a href="https://www.instagram.com/account_x_tkj_3" target="_blank" class="social-btn instagram-btn">
                     <img src="Images/Icon/Instagram.png" alt="Instagram" class="social-icon">
-                    <span>X TKJ 3 BANTARA - account_x_tkj_3</span>
+                    <span>Instagram X-TKJ-3 Bantara</span>
                 </a>
-                <a href="https://www.instagram.com/smk.bantara/" target="_blank" class="social-btn instagram-btn">
+                <a href="https://www.instagram.com/smk.bantara" target="_blank" class="social-btn instagram-btn">
                     <img src="Images/Icon/Instagram.png" alt="Instagram" class="social-icon">
-                    <span>SMK BANGUN NUSANTARA - smk.bantara</span>
+                    <span>Instagram SMK Bantara</span>
                 </a>
-                 <a href="https://www.instagram.com/ipob.bantara/" target="_blank" class="social-btn instagram-btn">
-                    <img src="Images/Icon/Instagram.png" alt="Instagram" class="social-icon">
-                    <span>OSIS SMK BANTARA - ipob.bantara</span>
+            </div>
+        </div>
+
+        <!-- Games Section -->
+        <div class="info-section">
+            <h2>
+                <span class="section-icon">🎮</span>
+                Games & Mini Games
+            </h2>
+            <p class="info-description">
+                Bermain game seru untuk mengisi waktu luang! 
+                Pilih game favoritmu dan nikmati permainannya!
+            </p>
+            <div class="games-grid">
+                <a href="Games/spin-wheel.html" class="game-card">
+                    <div class="game-icon">🎡</div>
+                    <div class="game-info">
+                        <h3 class="game-title">Spin Wheel</h3>
+                        <p class="game-description">Roda keberuntungan! Tambahkan pilihan dan putar untuk mendapatkan hasil acak.</p>
+                    </div>
+                    <div class="play-badge">▶️ MAIN</div>
+                </a>
+
+                <a href="Games/memory-game.html" class="game-card">
+                    <div class="game-icon">🧠</div>
+                    <div class="game-info">
+                        <h3 class="game-title">Memory Card</h3>
+                        <p class="game-description">Tes ingatanmu! Cocokkan kartu yang sama dengan 3 level kesulitan.</p>
+                    </div>
+                    <div class="play-badge">▶️ MAIN</div>
                 </a>
             </div>
         </div>
